[tool.poetry]
name = "ml-pipeline-exp"
version = "0.1.0"
description = "Experimental ML Pipeline to automate machine learning and return a trained machine learning model"
authors = ["VishalNadig <nadigvishal@gmail.com>"]
readme = "README.md"
packages = [{include = "ml_pipeline_exp"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.26.4"
pandas = "^2.2.1"
SQLAlchemy = "1.4.51"
SQLAlchemy-Utils = "^0.41.1"
kaggle = "^1.6.6"
scikit-learn = "^1.4.1.post1"
apache-airflow = "^2.8.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
