[project]
authors = [
    {name = "VishalNadig", email = "nadigvishal@gmail.com"},
]
requires-python = "<3.12,>=3.9"
dependencies = [
    "numpy<2.0.0,>=1.26.4",
    "pandas<3.0.0,>=2.2.1",
    "SQLAlchemy==1.4.51",
    "SQLAlchemy-Utils<1.0.0,>=0.41.1",
    "scikit-learn<2.0.0.0,>=1.4.1.post1",
    "apache-airflow<3.0.0,>=2.8.1",
    "boto3>=1.37.33",
]
name = "ml-pipeline-exp"
version = "0.1.0"
description = "Database Automation using SQLAlchemy and Python"
readme = "README.md"
